--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="container">
         <div class="image">
-          <img src="images/myImg.png" width="500" height="500">
+          <img src="images/myImg.png" class="myImg">
         </div>
         <div class="text">
           <h1 class="text1">Hello</h1>
@@ -54,9 +54,9 @@
         </div>
         <div class="follow">
           <h1 class="fh1">Follow Me</h1>
-          <img src="images/insta.png" class="insta" width="30" height="30" alt="">
-          <img src="images/linkedIn.png" class="linkedIn" width="30" height="30" alt="">
-          <img src="images/twitter.png" class="twitter"  width="30" height="30" alt="">
+          <img src="images/insta.png" class="insta logo"  alt="">
+          <img src="images/linkedIn.png" class="linkedIn logo" alt="">
+          <img src="images/twitter.png" class="twitter logo"  alt="">
         </div>
         <div>
           <p>
