--- a/resume.html
+++ b/resume.html
@@ -90,9 +90,9 @@
         </div>
         <div class="follow">
           <h1 class="fh1">Follow Me</h1>
-          <img src="images/insta.png" class="insta" width="30" height="30" alt="">
-          <img src="images/linkedIn.png" class="linkedIn" width="30" height="30" alt="">
-          <img src="images/twitter.png" class="twitter"  width="30" height="30" alt="">
+          <img src="images/insta.png" class="insta logo"  alt="">
+          <img src="images/linkedIn.png" class="linkedIn logo"  alt="">
+          <img src="images/twitter.png" class="twitter logo"   alt="">
         </div>
         <div>
           <p>
