--- a/projects.html
+++ b/projects.html
@@ -31,20 +31,20 @@
     <h1 class="heading">Projects</h1>
     <div class="project1">
         <div class="name">
-            <h2>Air Quality Monitoring System</h2>
-            <p>We divided India into 4 different zones (East, West, North and South) <br>and analysed the AQ indicators like the PM levels, SO2 levels to <br>determine the average Air Quality of all the zones and rank them accordingly.</p>
+            <h2 class="head1">Air Quality Monitoring System</h2>
+            <p class="desc1">We divided India into 4 different zones (East, West, North and South) <br>and analysed the AQ indicators like the PM levels, SO2 levels to <br>determine the average Air Quality of all the zones and rank them accordingly.</p>
         </div>
         <div class="image">
-            <img src="project/project1.png" width="500" height="300" alt="">
+            <img src="project/project1.png" class="img1" alt="">
         </div>
     </div>
     <div class="project2">
         <div class="name">
-            <h2>Inflation Predictor</h2>
-            <p>Taking on account all the parameters that affect a country's economy, <br>we developed a Machine Learning Model to predict future inflation of the country</p>
+            <h2 class="head1">Inflation Predictor</h2>
+            <p class="desc1">Taking on account all the parameters that affect a country's economy, <br>we developed a Machine Learning Model to predict future inflation of the country</p>
         </div>
         <div class="image">
-            <img src="project/inflation.jpg" width="500" height="300" alt="">
+            <img src="project/inflation.jpg" class="img1" alt="">
         </div>
     </div>
     <hr>
@@ -59,9 +59,9 @@
         </div>
         <div class="follow">
           <h1 class="fh1">Follow Me</h1>
-          <img src="images/insta.png" class="insta" width="30" height="30" alt="">
-          <img src="images/linkedIn.png" class="linkedIn" width="30" height="30" alt="">
-          <img src="images/twitter.png" class="twitter"  width="30" height="30" alt="">
+          <img src="images/insta.png" class="insta logo" alt="">
+          <img src="images/linkedIn.png" class="linkedIn logo" alt="">
+          <img src="images/twitter.png" class="twitter logo"  alt="">
         </div>
         <div>
           <p>
