--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,10 @@
             <h1 class="heading">Contact</h1>
             <p class="subH">Looking forward to hear from you</p>
             <br>
-            <h3>Phone</h3>
-            <p>9104332789</p>
-            <h3>Email</h3>
-            <p>tanmaywani145@gmail.com</p>
+            <h3 class="notToDisplay">Phone</h3>
+            <p class="notToDisplay">9104332789</p>
+            <h3 class="notToDisplay">Email</h3>
+            <p class="notToDisplay">tanmaywani145@gmail.com</p>
         </div>
         <div class="yourInfo">
           <form action="https://formsubmit.co/984345f652e21816921da9d91aa81923" method="post">
@@ -73,14 +73,13 @@
       </div>
       <div class="follow">
         <h1 class="fh1">Follow Me</h1>
-        <img src="images/insta.png" class="insta" width="30" height="30" alt="">
-        <img src="images/linkedIn.png" class="linkedIn" width="30" height="30" alt="">
-        <img src="images/twitter.png" class="twitter"  width="30" height="30" alt="">
+        <img src="images/insta.png" class="insta logo"  alt="">
+        <img src="images/linkedIn.png" class="linkedIn logo"  alt="">
+        <img src="images/twitter.png" class="twitter logo"   alt="">
       </div>
       <div>
         <p>
           Idea Credits: wix.com <br>
-          Form: FormSubmit.com
         </p>
       </div>
     </div>
